# STAA-578

./: .gitignore  pyproject.toml  setup.cfg
Homework/: Murray_HW1.ipynb
Homework/final_project/: env.yaml  model.py  pipeline.yaml  process_data.py  train_test_split.py
Homework/final_project/data/: bh_locations.csv  well_injection.csv
Homework/hw2/: Murray_STAA578_HW2.ipynb
Homework/hw3/: Murray_STAA578_HW3.ipynb
Homework/hw4/: Murray_STAA578_HW4.ipynb  Murray_STAA578_HW4_alt.ipynb  Problem 1.docx
Homework/hw4/other_tries/: Murray_STAA578_HW4.ipynb  Murray_STAA578_HW4_pretrained.ipynb
Lectures/: RNN_timeseries.ipynb
Lectures/week1_python/: python_basics.ipynb  python_classes.ipynb  python_miscellaneous.ipynb  python_tensor.ipynb
Lectures/week3_python/: Validation_generalization.ipynb  deep_forward_networks.ipynb
data/sql/: bh_locations..sql  well_injection.sql  well_production.sql
