[tool.poetry]
name = "STAA 578"
version = "0.1.0"
description = "Machine Learnign"
authors = ["rodney <murray.rodney.7@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.0.2"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
joblib = "^1.3.2"
pyarrow = "^15.0.2"
tensorflow = "^2.16.1"
keras = "^3.2.1"
scikit-learn = "^1.4.2"
mlflow = "^2.12.1"
geopandas = "^0.14.3"
ploomber = "^0.23.2"
pygraphviz = "^1.12"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.4"
jupyter = "^1.0.0"
pytest = "^7.2.0"
ipython = "^8.8.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
